--- a/app/src/main/res/layout/location_selector.xml
+++ b/app/src/main/res/layout/location_selector.xml
@@ -5,10 +5,12 @@
     android:id="@+id/text_input_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:hint="Location"
+    android:hint="@string/location_selector_hint"
     app:startIconDrawable="@drawable/ic_my_location"
+    app:startIconContentDescription="@string/location_selector_locate_device"
     app:endIconMode="custom"
     app:endIconDrawable="@drawable/ic_edit"
+    app:endIconContentDescription="@string/location_selector_locate_device"
     style="@style/Widget.Material3.TextInputLayout.FilledBox">
 
     <com.google.android.material.textfield.TextInputEditText
