--- a/app/src/main/res/layout/activity_station_detail.xml
+++ b/app/src/main/res/layout/activity_station_detail.xml
@@ -26,7 +26,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="bottom|right"
+            android:gravity="bottom|end"
             android:layout_marginBottom="4dp"
             >
 
@@ -65,7 +65,7 @@
                 android:paddingBottom="14dp"
                 app:layout_constraintEnd_toStartOf="@id/text_price"
                 app:layout_constraintBottom_toBottomOf="@id/text_price"
-                android:gravity="bottom|right"
+                android:gravity="bottom|end"
                 style="@style/TextAppearance.Material3.BodyMedium"
                 android:textColor="?attr/colorSecondary"
                 android:text="Gasoleo A" />
