🎨 linter complains on overdrawing background
but if we remove it we get no ripple effect
solution: set it as foreground

--- a/app/src/main/res/layout/item_gas_station.xml
+++ b/app/src/main/res/layout/item_gas_station.xml
@@ -9,7 +9,7 @@
     android:paddingBottom="0dp"
     android:clickable="true"
     android:focusable="true"
-    android:background="?attr/selectableItemBackground">
+    android:foreground="?attr/selectableItemBackground">
 
     <!-- Station Name -->
     <TextView
