🌐 Euskara fixes and generation

--- a/app/src/main/res/values/arrays_languages.xml
+++ b/app/src/main/res/values/arrays_languages.xml
@@ -8,5 +8,6 @@
         <item>ca</item>
         <item>en</item>
         <item>es</item>
+        <item>eu</item>
     </string-array>
 </resources>
