--- a/app/src/main/res/layout/item_gas_station.xml
+++ b/app/src/main/res/layout/item_gas_station.xml
@@ -111,15 +111,14 @@
     </LinearLayout>
 
     <!-- Separator -->
-    <View
+
+    <com.google.android.material.divider.MaterialDivider
         android:id="@+id/separator"
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:background="?attr/colorOutline"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
         app:layout_constraintTop_toBottomOf="@id/price_distance_container"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
