--- a/app/src/main/res/layout/item_gas_station.xml
+++ b/app/src/main/res/layout/item_gas_station.xml
@@ -5,8 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingHorizontal="16dp"
-    android:paddingTop="8dp"
+    android:paddingHorizontal="@dimen/space_xl"
+    android:paddingTop="@dimen/space_s"
     android:paddingBottom="0dp"
     android:clickable="true"
     android:focusable="true"
@@ -33,7 +33,7 @@
         android:id="@+id/text_address"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
+        android:layout_marginTop="@dimen/space_xs"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/price_distance_container"
         app:layout_constraintTop_toBottomOf="@id/text_location"
@@ -53,13 +53,47 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/price_distance_container"
         app:layout_constraintTop_toBottomOf="@id/text_name"
-        android:layout_marginTop="2dp"
+        android:layout_marginTop="@dimen/space_xs"
         android:maxLines="1"
         android:ellipsize="end"
         style="@style/TextAppearance.Material3.BodyMedium"
         android:textColor="?attr/colorSecondary"
         tools:ignore="HardcodedText"
         android:text="City, State" />
+
+    <!-- Opening status -->
+    <!-- green for open, red for closed -->
+    <LinearLayout
+        android:id="@+id/open_status"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/text_address"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="?attr/colorOnSecondary"
+        android:layout_marginBottom="@dimen/space_s"
+        android:gravity="end|center">
+
+        <ImageView
+            android:id="@+id/icon_open_status"
+            android:layout_width="14dp"
+            android:layout_height="14dp"
+            tools:tint="?attr/colorOnBackground"
+            tools:visibility="visible"
+            android:src="@drawable/ic_schedule" />
+
+        <TextView
+            android:layout_marginStart="@dimen/space_m"
+            android:id="@+id/text_open_status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            style="@style/TextAppearance.Material3.LabelSmall"
+            android:textColor="?attr/colorOnBackground"
+            tools:ignore="HardcodedText"
+            android:text="OPEN until 13:30" />
+
+    </LinearLayout>
 
     <!-- Right-side Container for Price + Distance -->
     <LinearLayout
@@ -77,7 +111,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="end"
-            android:layout_marginBottom="2dp"
             style="@style/TextAppearance.Material3.HeadlineMedium"
             android:textColor="?attr/colorError"
             android:textStyle="bold"
@@ -90,23 +123,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="end"
-            style="@style/TextAppearance.Material3.BodyMedium"
+            style="@style/TextAppearance.Material3.TitleLarge"
             android:textColor="?attr/colorPrimary"
             tools:ignore="HardcodedText"
             android:text="3,2 km" />
-
-        <!-- Opening status -->
-        <!-- green for open, red for closed -->
-        <TextView
-            android:id="@+id/text_open_status"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="end"
-            android:layout_marginBottom="4dp"
-            style="@style/TextAppearance.Material3.LabelSmall"
-            android:textColor="?attr/colorOnBackground"
-            tools:ignore="HardcodedText"
-            android:text="OPEN until 13:30" />
 
     </LinearLayout>
 
@@ -116,8 +136,8 @@
         android:id="@+id/separator"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
-        app:layout_constraintTop_toBottomOf="@id/price_distance_container"
+        android:layout_marginTop="@dimen/space_m"
+        app:layout_constraintTop_toBottomOf="@id/open_status"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
