--- a/app/src/main/res/values/arrays_languages.xml
+++ b/app/src/main/res/values/arrays_languages.xml
@@ -9,5 +9,6 @@
         <item>en</item>
         <item>es</item>
         <item>eu</item>
+        <item>gl</item>
     </string-array>
 </resources>
