--- a/app/src/main/res/layout/item_gas_station.xml
+++ b/app/src/main/res/layout/item_gas_station.xml
@@ -65,13 +65,14 @@
     <!-- green for open, red for closed -->
     <LinearLayout
         android:id="@+id/open_status"
+        android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/text_address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="?attr/colorOnSecondary"
         android:layout_marginBottom="@dimen/space_s"
+        android:paddingHorizontal="@dimen/space_m"
+        android:background="@drawable/bg_status_pill"
         android:gravity="end|center">
 
         <ImageView
