🌐 Arabic added (via ChatGpt, sorry)

--- a/app/src/main/res/values/arrays_languages.xml
+++ b/app/src/main/res/values/arrays_languages.xml
@@ -5,6 +5,7 @@
 <resources>
     <string-array name="supported_language_codes">
         <item>an</item>
+        <item>ar</item>
         <item>ca</item>
         <item>en</item>
         <item>es</item>
