--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -120,7 +120,7 @@
             android:id="@+id/loading_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/refreshing_data"
+            android:text="@string/loading_new_data"
             android:textColor="?attr/colorOnPrimary" />
     </LinearLayout>
 
