🧹 Cleared warning on station status icons
Since a description required by the linter
would be rendundant with the descriptive
text besides the icon.

--- a/app/src/main/res/layout/activity_station_detail.xml
+++ b/app/src/main/res/layout/activity_station_detail.xml
@@ -102,7 +102,9 @@
                     android:layout_gravity="start"
                     tools:tint="?attr/colorOnBackground"
                     tools:visibility="visible"
-                    android:src="@drawable/ic_schedule" />
+                    android:src="@drawable/ic_schedule"
+                    android:importantForAccessibility="no"
+                    android:contentDescription="@null" />
 
                 <TextView
                     android:id="@+id/text_open_status"
