🐛 Sometimes you could edit the product
By taping on the name you could endup
editing the product, letting the application
in an unpredictable status.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
                 android:id="@+id/product_selector"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:editable="false"
                 android:inputType="none" />
 
         </com.google.android.material.textfield.TextInputLayout>
