♻️ CategorizedProductSelector is the new selector
Fixes: #9

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,23 +14,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:orientation="vertical">
 
-        <com.google.android.material.textfield.TextInputLayout
+        <net.canvoki.carburoid.product.CategorizedProductSelectorView
+            android:id="@+id/product_selector"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:hint="@string/product_selector_hint"
-            app:startIconDrawable="@drawable/ic_local_gas_station"
-            app:startIconContentDescription="@string/product_selector_icon_description"
-            style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu">
-
-            <net.canvoki.carburoid.product.ProductSelector
-                android:id="@+id/product_selector"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:editable="false"
-                android:inputType="none" />
-
-        </com.google.android.material.textfield.TextInputLayout>
+            android:layout_marginBottom="16dp" />
 
         <net.canvoki.carburoid.location.LocationSelector
             android:id="@+id/location_selector"
