--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -50,6 +50,12 @@
             app:summary="@string/settings_filter_non_public_summary"
             app:defaultValue="true" />
 
+        <SwitchPreferenceCompat
+            app:key="hide_beyond_sea"
+            app:title="@string/settings_filter_beyond_sea"
+            app:summary="@string/settings_filter_beyond_sea_summary"
+            app:defaultValue="true" />
+
         <ListPreference
             android:key="hide_closed_margin_minutes"
             android:title="@string/settings_filter_closed"
