♻️: StationList: Includes the loading placeholder

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,16 +27,6 @@
             android:layout_marginBottom="16dp" />
     </LinearLayout>
 
-    <ProgressBar
-        android:id="@+id/progress_bar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        app:layout_constraintTop_toBottomOf="@id/heading"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
     <LinearLayout
         android:id="@+id/list_container"
         android:orientation="vertical"
@@ -47,27 +37,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-        <TextView
-            android:id="@+id/text_progress"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:textSize="16sp"
-            android:layout_marginTop="8dp"
-            android:visibility="gone"
-            android:gravity="center"
-            android:layout_weight="1" />
-
         <net.canvoki.carburoid.ui.StationListView
             android:id="@+id/station_list"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
-            android:visibility="gone" />
+            android:layout_weight="1" />
 
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/loading_pill"
+        android:id="@+id/downloading_pill"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
