--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,23 +27,14 @@
             android:layout_marginBottom="16dp" />
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/list_container"
-        android:orientation="vertical"
+    <net.canvoki.carburoid.ui.StationListView
+        android:id="@+id/station_list"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/heading"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-        <net.canvoki.carburoid.ui.StationListView
-            android:id="@+id/station_list"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
-
-    </LinearLayout>
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <LinearLayout
         android:id="@+id/downloading_pill"
