💄 icon for weblate settings option

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -25,6 +25,7 @@
         <Preference
             android:key="translate_link"
             android:title="@string/settings_translate_title"
+            android:icon="@drawable/ic_weblate"
             android:summary="@string/settings_translate_summary">
             <intent
                 android:action="android.intent.action.VIEW"
