✨ Preferences for changing the country
Now requires application reload.

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -32,6 +32,13 @@
                 android:data="https://hosted.weblate.org/projects/carburoid/carburoid-ui/" />
         </Preference>
 
+        <ListPreference
+            android:key="app_country"
+            android:title="@string/settings_country_title"
+            android:icon="@drawable/ic_system_update_alt"
+            android:summary="@string/settings_country_summary"
+            android:defaultValue="system" />
+
     </PreferenceCategory>
 
     <!-- Group: Station Filtering -->
