--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
+    <net.canvoki.carburoid.ComposePreference
+        android:key="compose_preferences"
+        android:title="" />
 
     <!-- Group: Language Appearance -->
     <PreferenceCategory
