♻️ Details: other product prices with composable

--- a/app/src/main/res/layout/activity_station_detail.xml
+++ b/app/src/main/res/layout/activity_station_detail.xml
@@ -245,5 +245,10 @@
             <!-- Here the dynamically added TextViews for other products -->
         </LinearLayout>
 
+        <androidx.compose.ui.platform.ComposeView
+            android:id="@+id/migrated_components"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
     </LinearLayout>
 </ScrollView>
